<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenDroid</string>

    <string name="title_section1">Overview</string>
    <string name="title_section2">Instances</string>
    <string name="title_section3">Volumes</string>
    <string name="title_section4">Images</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="horizon_url">Horizon</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="splash_text">OPEN\nDROID</string>
    <string name="title_activity_instance_detail">InstanceDetailActivity</string>
    <string name="StatusValue">Status:</string>
    <string name="IPv4">IPv4:</string>
    <string name="ImageText">Image:</string>
    <string name="FlavorText">Flavor:</string>
    <string name="CreatedDate">Created:</string>

</resources>
